24/02/07 Julien Dutheil
* New pairwise alignment algorithm: gap opening and extending penalties.
	
22/02/07 Julien Dutheil
* GeneticCode derivated classes now properly redefine the translate(Sequence&)
	method.

19/01/07 -*- Version 1.2.0 -*-

19/01/07 Julien Dutheil
* Functions AlphabetTools::getType() and StringSequenceTools::getAlphabetFromSequence() rewritten.
* New DefaultNucleotideScore matrix.
* New AAIndex1Entry and AAIndex2Entry classes which create AlphabetIndex1 and
AlphabetIndex2 objects from AAIndex1 and AAIndex2 entries, respectively.

18/12/06 Julien Dutheil
* New alignment tools in SiteContainerTools, including the Needleman and
Wunsch alogrithm.
* BLOSUM50 matrix available.
* Bug fixed in Sequence.h: method setContent is now properly redefined.
* Bug fixed in ProteicAlphabet->getAbbr(int). The returned result is now
correct!!!

06/12/06 Julien Dutheil
* DefaultAlphabet now accepts "." characters.
* New AlphabetTools::isDefaultAlphabet(const Alphabet *) method.
* New SiteContainerTools::resolveDottedAlignment(const Sitecontainer &, const Alphabet *) method.

30/08/06 Julien Dutheil
* Bug fixed in phylip sequential reader, + duplicated sequence in container
now throws sequence name. (included in 1.1.1 release).

28/08/06 -*- Version 1.1.1 -*-

08/08/06 Julien Dutheil
* Bug fixed in Phylip sequential read method.

15/06/06 Julien Dutheil
* Method changeGapsToUnknownCharacters() moved from SequenceContainerTools to
SiteContainerTools, and is really faster!
* New removeGapOnlySites() method in SiteContainerTools.
* New method SiteTools::isGapOnly().
* new 'sequence.max_gap_allowed' option in SequenceApplicationTools::getSitesToAnalyse().

13/06/06 Julien Dutheil
* Phylip sequential format improved, no more empty line between sequences
needed.

12/06/06 Julien Dutheil
* SiteTools::isConstant() method now has a 'ignoreUnknown' option.

01/01/06 Julien Dutheil
* VectorSiteContainer and AlignedSequenceContainer now number sites from 1 (and not 0). 
