@@ -123,10 +123,10 @@ class AbstractISequence2:
 
 	public:
 		virtual
-#if defined(VIRTUAL_COV)
-		VectorSequenceContainer *
-#else
+#if defined(NO_VIRTUAL_COV)
 		SequenceContainer *
+#else
+		VectorSequenceContainer *
 #endif
 		read(istream & input, const Alphabet * alpha) const throw (Exception)
 		{
@@ -143,10 +143,10 @@ class AbstractISequence2:
 		 * @throw Exception If the file is not in the specified format.
 		 */
 		virtual
-#if defined(VIRTUAL_COV)
-		VectorSequenceContainer *
-#else
+#if defined(NO_VIRTUAL_COV)
 		SequenceContainer *
+#else
+		VectorSequenceContainer *
 #endif
 		readFromStream(istream & input, const Alphabet * alpha) const throw (Exception)
 		{
@@ -157,10 +157,10 @@ class AbstractISequence2:
 
 	public:
 		virtual
-#if defined(VIRTUAL_COV)
-		VectorSequenceContainer *
-#else
+#if defined(NO_VIRTUAL_COV)
 		SequenceContainer *
+#else
+		VectorSequenceContainer *
 #endif
 		read(const string & path , const Alphabet * alpha) const throw (Exception)
 		{
@@ -179,10 +179,10 @@ class AbstractISequence2:
 		 * @throw Exception If the file is not in the specified format.
 		 */
 		virtual
-#if defined(VIRTUAL_COV)
-		VectorSequenceContainer *
-#else
+#if defined(NO_VIRTUAL_COV)
 		SequenceContainer *
+#else
+		VectorSequenceContainer *
 #endif
 		readFromFile(const string & path , const Alphabet * alpha) const throw (Exception)
 		{
