@@ -55,7 +55,8 @@ knowledge of the CeCILL license and that you accept its terms.
  * But for now, we do not allow to construct a Site directly from a string.
  * This should not be a constraint, since you never read sites directly from a file.
  */
-class Site: public SymbolList 
+class Site:
+  public SymbolList 
 {	
 	protected:
 		/**
