@@ -8,15 +8,22 @@ AC_PROG_CC
 AC_PROG_CXX
 AC_PROG_INSTALL
 AC_PROG_LIBTOOL
+AC_MSG_CHECKING([Covariant return with virtual inheritance])
 AC_ARG_WITH(
 	[virtual-cov],
 	[  --with-virtual-cov      Enable covariant return type with
 	                  virtual inheritance (GCC >= 3.4)],
-	[$with_virtual_cov=yes]
+  ,
+	with_virtual_cov="yes"
 )
-if test "$with_virtual_cov" == "yes"
+AC_MSG_RESULT($with_virtual_cov);
+if test "$with_virtual_cov" == "no"
 then
-	AC_MSG_WARN([Covariant return type with virtual inheritance enabled.]);
-	AC_DEFINE(VIRTUAL_COV, yes)
+	AC_MSG_WARN([
++--------------------------------------------------------+
+|Covariant return type with virtual inheritance disabled.|
++--------------------------------------------------------+
+]);
+	AC_DEFINE(NO_VIRTUAL_COV, yes)
 fi
 AC_OUTPUT(Makefile Seq/Makefile)
